--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.19.6",
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9"
+    "@types/react-dom": "^18.0.9",
+    "babel-plugin-module-resolver": "^4.1.0"
   }
 }
