--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --runInBand --detectOpenHandles --forceExit --testTimeout=90000"
   },
   "dependencies": {
     "@next/font": "13.0.7",
@@ -21,9 +22,12 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.19.6",
+    "@types/jest": "^29.2.4",
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "babel-plugin-module-resolver": "^4.1.0"
+    "babel-plugin-module-resolver": "^4.1.0",
+    "jest": "^29.3.1",
+    "mockingoose": "^2.16.2"
   }
 }
