--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@next/font": "13.0.7",
+    "dayjs": "^1.11.7",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "joi": "^17.7.0",
@@ -18,7 +19,8 @@
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.19.6",
@@ -26,8 +28,11 @@
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/uuid": "^9.0.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "jest": "^29.3.1",
-    "mockingoose": "^2.16.2"
+    "mockingoose": "^2.16.2",
+    "nock": "^13.2.9",
+    "node-mocks-http": "^1.12.1"
   }
 }
